# helix-ai

./: CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coverage  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  schemas.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: analytics.py  backtesting.py  briefings.py  jobs.py  news.py  replay.py  sentiment.py  signals.py  streaming.py  trust.py
backend/app/core/: config.py  middleware.py
backend/app/db/: session.py
backend/app/models/: __init__.py  annotation.py  ingestion.py  news.py  sentiment.py  signal.py
backend/app/schemas/: analytics.py  backtest.py  briefing.py  jobs.py  news.py  replay.py  sentiment.py  trust.py
backend/app/services/: aggregation_service.py  backtest_service.py  briefing_service.py  cache_service.py  job_service.py  news_service.py  nlp_service.py  replay_service.py  sentiment.py  signal_service.py  store.py  stream_service.py  trust_service.py  weighting_service.py
backend/tests/: conftest.py  test_api.py  test_coverage_gaps.py  test_health.py  test_pipeline.py
docs/: architecture.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.jsx  App.tsx  api.js
frontend/src/components/: NavBar.jsx  PageHeader.tsx
frontend/src/data/: mockMarket.ts
frontend/src/hooks/: useMarketStream.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: DashboardPage.jsx  DashboardPage.tsx  LoginPage.jsx  NewsFeedPage.jsx  (+5 more)
(+7 files in other folders)
